Hello uses style.css

--- a/hello/hello.html
+++ b/hello/hello.html
@@ -1,11 +1,9 @@
 <!-- Author: Alexander Shvets (alex@githowto.com) -->
 <html>
   <head>
+  <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hello, World!</h1>
-	NemF change
-	New head in branch master 2
-	New head in branch master 3
   </body>
 </html>
